Replace my own class Pair with existing class from "javatuple" library.